actualización de contenedores

--- a/novias/robin.html
+++ b/novias/robin.html
@@ -75,41 +75,43 @@
         </div>
       </nav>
     </header>
-    <div class="container d-flex justify-content-center mt-5">
+    
+    <!-- Imagen principal centrada con márgenes responsivos -->
+    <div class="container d-flex justify-content-center mt-5 px-2">
       <img 
         src="img/robin.png"
-        class="d-block w-50"
+        class="d-block w-50 img-fluid"
         alt="robin"
       >
     </div>
 
-    <main class="container mt-7 mb-5">
+    <main class="container mt-5 mb-5 px-2">
       <!-- PRIMERA PARTE -->
-      <div class="container mt-5">
+      <div class="container-fluid mt-5">
         <div class="row justify-content-center align-items-center">
           <!-- Imagen a la izquierda -->
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-center mb-3 mb-md-0">
             <img
               src="img/ronted1.jpg"
-              class="img-fluid rounded m-2"
+              class="img-fluid rounded mx-auto d-block"
               alt="ted y robin"
             >
           </div>
           <!-- Texto a la derecha -->
           <div class="col-md-8">
-            <div class="card card-body bg-custom2 p-3">
+            <div class="card card-body bg-custom2 p-3 mb-3">
               <h5 class="card-title">¿Qué hace diferente a Robin?</h5>
               <p class="card-text">
                 La relación entre Ted Mosby y Robin Scherbatsky es una de las más importantes y complejas de la serie "How I Met Your Mother". A lo largo de las nueve temporadas, su relación evoluciona y se desarrolla a través de múltiples altibajos, reflejando tanto el amor profundo como las dificultades que enfrentan. La historia de Ted y Robin es una montaña rusa emocional que se convierte en el núcleo de la narrativa de la serie.
               </p>
             </div>
-            <div class="card card-body bg-custom2 p-3 mt-3">
+            <div class="card card-body bg-custom2 p-3 mb-3">
               <h5 class="card-title">El Primer Encuentro</h5>
               <p class="card-text">
                 Ted y Robin se conocen en el primer episodio de la serie, cuando Ted se enamora de ella a primera vista en el bar MacLaren's. Este primer encuentro establece la dinámica de su relación, con Ted persiguiendo el amor verdadero y Robin enfocada en su carrera y vida independiente.
               </p>
             </div>
-            <div class="card card-body bg-custom2 p-3 mt-3">
+            <div class="card card-body bg-custom2 p-3">
               <h5 class="card-title">Una Amistad que Evoluciona</h5>
               <p class="card-text">
                 A pesar del incómodo comienzo, Ted y Robin desarrollan una amistad cercana. Robin se convierte en parte del grupo de amigos de Ted. Ted, aunque sigue enamorado de Robin, respeta su decisión y trata de seguir adelante. La amistad entre ambos se caracteriza por su complicidad y apoyo mutuo, aunque siempre hay una tensión subyacente debido a los sentimientos de Ted.
@@ -121,11 +123,11 @@
       <!-- FIN PRIMERA PARTE -->
 
       <!-- SEGUNDA PARTE -->
-      <div class="container mt-5">
+      <div class="container-fluid mt-5">
         <div class="row justify-content-center align-items-center">
           <!-- Contenedor de las cards a la izquierda -->
-          <div class="col-md-8">
-            <div class="card card-body bg-custom2 p-3">
+          <div class="col-md-8 mb-3 mb-md-0">
+            <div class="card card-body bg-custom2 p-3 mb-3">
               <h5 class="card-title">La Primera Relación Seria</h5>
               <p class="card-text">
                 Eventualmente, Ted y Robin comienzan una relación seria en la primera temporada. 
@@ -133,7 +135,7 @@
                 Esta diferencia fundamental en sus deseos de vida provoca una ruptura inevitable al final de la segunda temporada.
               </p>
             </div>
-            <div class="card card-body bg-custom2 p-3 mt-3">
+            <div class="card card-body bg-custom2 p-3 mb-3">
               <h5 class="card-title">Altibajos y Relaciones Intermitentes</h5>
               <p class="card-text">
                 Después de su ruptura, Ted y Robin intentan seguir adelante con sus vidas. 
@@ -141,7 +143,7 @@
                 Ted sigue amando a Robin, y su amistad a menudo se ve afectada por la tensión de sus sentimientos.
               </p>
             </div>
-            <div class="card card-body bg-custom2 p-3 mt-3">
+            <div class="card card-body bg-custom2 p-3">
               <h5 class="card-title">Momentos clave en su relación</h5>
               <p class="card-text">
                 Uno de esos momentos es cuando Ted roba un cuerno azul francés para Robin en su primera cita, un gesto romántico que se convierte en un símbolo recurrente de su relación. 
@@ -153,7 +155,7 @@
           <div class="col-md-4 text-center">
             <img
               src="img/robinyted.jpg"
-              class="img-fluid rounded m-2"
+              class="img-fluid rounded mx-auto d-block"
               alt="ted y robin"
             >
           </div>
@@ -162,28 +164,26 @@
       <!-- FIN SEGUNDA PARTE -->
 
       <!-- ULTIMA PARTE -->
-      <div class="row justify-content-center">
-        <div class="container mt-5">
-          <div class="row flex-column align-items-center">
-            <div class="d-flex justify-content-center mt-5">
-              <img 
-                src="img/always.png"
-                class="d-block w-100 mx-auto"
-                alt="siempre fue robin"
-              >
-            </div>
-            <div class="text-center mt-3">
-              <img
-                src="img/final.jpg"
-                class="img-fluid rounded w-100 mx-auto"
-                alt="escena cuerno azul"
-              >
-            </div>
-            <div class="card card-body bg-custom2 p-3 mt-3 w-100 mx-auto">
-              <p class="card-text text-center">
-                En la serie, el matrimonio de Barney y Robin se presenta como un punto decisivo que marca el cierre de un ciclo para Ted, quien, a pesar de seguir sintiendo un profundo amor por Robin, apoya la boda y utiliza este evento como una oportunidad para buscar su propia felicidad y dejar atrás viejos sentimientos. Durante la ceremonia, Ted reflexiona sobre la complejidad de su relación con Robin, marcada por momentos de pasión, desafíos irreconciliables y un constante vaivén entre amor, amistad y pérdida. El giro final revela el fallecimiento de Tracy y muestra cómo, impulsado por el aliento de sus hijos y simbolizado por el emblemático cuerno azul francés, Ted decide retomar su relación con Robin, reafirmando que el amor verdadero es un proceso de sacrificio, crecimiento personal y comunicación.
-              </p>
-            </div>
+      <div class="container-fluid mt-5">
+        <div class="row flex-column align-items-center">
+          <div class="d-flex justify-content-center mt-5">
+            <img 
+              src="img/always.png"
+              class="img-fluid rounded mx-auto d-block"
+              alt="siempre fue robin"
+            >
+          </div>
+          <div class="text-center mt-3">
+            <img
+              src="img/final.jpg"
+              class="img-fluid rounded mx-auto d-block"
+              alt="escena cuerno azul"
+            >
+          </div>
+          <div class="card card-body bg-custom2 p-3 mt-3 w-100 mx-auto">
+            <p class="card-text text-center">
+              En la serie, el matrimonio de Barney y Robin se presenta como un punto decisivo que marca el cierre de un ciclo para Ted, quien, a pesar de seguir sintiendo un profundo amor por Robin, apoya la boda y utiliza este evento como una oportunidad para buscar su propia felicidad y dejar atrás viejos sentimientos. Durante la ceremonia, Ted reflexiona sobre la complejidad de su relación con Robin, marcada por momentos de pasión, desafíos irreconciliables y un constante vaivén entre amor, amistad y pérdida. El giro final revela el fallecimiento de Tracy y muestra cómo, impulsado por el aliento de sus hijos y simbolizado por el emblemático cuerno azul francés, Ted decide retomar su relación con Robin, reafirmando que el amor verdadero es un proceso de sacrificio, crecimiento personal y comunicación.
+            </p>
           </div>
         </div>
       </div>
@@ -198,12 +198,12 @@
           </div>
           <div class="col-4 col-sm-2">
             <a href="https://www.facebook.com/OfficialHowIMetYourMother/">
-              <img src="../img/iconos/fb.png" alt="facebook" class="img-fluid" >
+              <img src="../img/iconos/fb.png" alt="facebook" class="img-fluid">
             </a>
           </div>
           <div class="col-4 col-sm-2">
             <a href="https://www.disneyplus.com/es-ar/series/how-i-met-your-mother/3kpBeRQiKjkq">
-              <img src="../img/iconos/disney.png" alt="disneyplus" class="img-fluid" >
+              <img src="../img/iconos/disney.png" alt="disneyplus" class="img-fluid">
             </a>
           </div>
           <div class="col-4 col-sm-2">
@@ -213,7 +213,7 @@
           </div>
           <div class="col-4 col-sm-2">
             <a href="https://www.primevideo.com/-/es/detail/How-I-met-your-mother/0HX4L62NMBMKP5QXU8QNR8958G">
-              <img src="../img/iconos/prime.png" alt="primevideo" class="img-fluid" >
+              <img src="../img/iconos/prime.png" alt="primevideo" class="img-fluid">
             </a>
           </div>
           <div class="col-4 col-sm-2">
@@ -224,7 +224,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-      crossorigin="anonymous">
-    </script>   
+      crossorigin="anonymous"></script>   
   </body>
 </html>
