--- a/recepcion.html
+++ b/recepcion.html
@@ -89,7 +89,7 @@
       <!-- Titulo -->
     <div class="container mt-5 text-center">
       <div class="row d-flex justify-content-center">
-        <img src="img/portrecepcion.jpg" class="d-block w-100 mt-6 mb-6" alt="personajes en el bar" >
+        <img src="img/portrecepcion.png" class="d-block w-100 mt-6 mb-6" alt="personajes en el bar" >
       </div>
     </div>
     <!-- Titulo -->
