--- a/desarrolladora.html
+++ b/desarrolladora.html
@@ -1,169 +1,265 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    >
-    <link rel="stylesheet" href="css/estilos.css" >
+    />
+    <link rel="stylesheet" href="css/estilos.css" />
     <title>HIMYM - sobre el sitio</title>
   </head>
   <body class="containerimg fs-5">
     <header>
-    <nav class="navbar navbar-expand-lg navbar-light text-dark bg-custom fs-5">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">HIMYM</a>
-        <button 
-          class="navbar-toggler" 
-          type="button" 
-          data-bs-toggle="collapse" 
-          data-bs-target="#navbarNav" 
-          aria-controls="navbarNav" 
-          aria-expanded="false" 
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="index.html">HOME</a>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                PERSONAJES
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="personajes/index.html">¿QUIÉNES SON?</a></li>
-                <li><a class="dropdown-item" href="personajes/relaciones.html">RELACIONES</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                NOVIAS
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="novias/index.html">LOS AMORES DE TED</a></li>
-                <li><a class="dropdown-item" href="novias/robin.html">ROBIN</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                REGLAS
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="reglas/index.html">¿REGLAS?</a></li>
-                <li><a class="dropdown-item" href="reglas/teorias.html">TEORIAS</a></li>
-                <li><a class="dropdown-item" href="reglas/brocode.html">THE BROCODE</a></li>
-                <li><a class="dropdown-item" href="reglas/playbook.html">THE PLAYBOOK</a></li>
-              </ul>
-            </li>
-            <a class="nav-item nav-link" href="mother.html">LA MADRE</a>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                EL FINAL
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="final/index.html">¿EL FINAL?</a></li>
-                <li><a class="dropdown-item" href="final/finalt.html">FINAL ALTERNATIVO</a></li>
-              </ul>
-            </li>
-            <a class="nav-item nav-link" href="recepcion.html">RECEPCIÓN</a>
+      <nav
+        class="navbar navbar-expand-lg navbar-light text-dark bg-custom fs-5"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">HIMYM</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link" href="index.html">HOME</a>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  PERSONAJES
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="personajes/index.html"
+                      >¿QUIÉNES SON?</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="personajes/relaciones.html"
+                      >RELACIONES</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  NOVIAS
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="novias/index.html"
+                      >LOS AMORES DE TED</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="novias/robin.html">ROBIN</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  REGLAS
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="reglas/index.html"
+                      >¿REGLAS?</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="reglas/teorias.html"
+                      >TEORIAS</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="reglas/brocode.html"
+                      >THE BROCODE</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="reglas/playbook.html"
+                      >THE PLAYBOOK</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <a class="nav-item nav-link" href="mother.html">LA MADRE</a>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  EL FINAL
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="final/index.html"
+                      >¿EL FINAL?</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="final/finalt.html"
+                      >FINAL ALTERNATIVO</a
+                    >
+                  </li>
+                </ul>
+              </li>
+              <a class="nav-item nav-link" href="recepcion.html">RECEPCIÓN</a>
+            </div>
           </div>
         </div>
+      </nav>
+      <!-- Título -->
+      <div class="container d-flex justify-content-center mt-5 text-center">
+        <img src="img/sitio.png" class="d-block w-50" alt="desarrolla" />
       </div>
-    </nav>
-    <!-- Titulo -->
-    <div class="container d-flex justify-content-center mt-5 text-center">
-      <img src="img/sitio.png" class="d-block w-50" alt="desarrolla" >
-    </div>
-
-    <!-- Titulo -->
-  </header>
-  <main class="container d-flex justify-content-center mt-7 mb-5">
-    <div class="container mt-5">
-      <div>
-
-        <div class="row">
-
-          <div class="card card-body bg-custom2 p-3 mt-3 mb-5 w-100 mx-auto">
-            <p class="card-text">
-              El desarrollo de la página web implicó una integración multidisciplinaria entre lo técnico y lo artístico. En el ámbito técnico, se implementaron diversos lenguajes de programación y herramientas de diseño para garantizar la funcionalidad e interactividad de la plataforma, optimizando la experiencia del usuario mediante una interfaz clara, dinámica y adaptable a distintos dispositivos y requerimientos de accesibilidad.<br>
-
-En el aspecto artístico, el desafío fue crear una representación visual que reflejara la estética de "How I Met Your Mother", incorporando paletas de colores, tipografías y composiciones que evocaran la esencia de la serie. Se estructuraron secciones dedicadas a resúmenes de episodios, análisis de personajes, teorías y recepción crítica, haciendo de la página un espacio tanto informativo como interactivo. Este proyecto permitió aplicar conocimientos en Artes Multimediales y explorar cómo la tecnología puede fusionarse con el arte para generar experiencias digitales inmersivas, consolidándose como un punto de encuentro para los seguidores de la serie.
-            </p>
-          </div>
-
-          <!-- ultima parte -->
-          <div class="card mb-3 bg-custom">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img
-                  src="img/desarrolladora.jpg"
-                  class="img-fluid rounded m-2 ms-0"
-                  alt="desarrolladora"
-                >
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">
-                    Sobre la Desarrolladora
-                  </h5>
-                  <p class="card-text">
-                    Mi nombre es Lourdes, nací el 17 de enero de 2006
-                    en Chaco, Argentina. Motivada por la pasión por el arte y lo innovador, decidí
-                    iniciar mis estudios en la carrera de Artes Multimediales en la Universidad
-                    Nacional de las Artes (UNA) en 2024. Siendo este trabajo perteneciente a la materia de primer año: "Informática General I", del turno mañana. <br>Este
-                    proyecto fue concebido con el propósito de combinar los conocimientos
-                    adquiridos en mi formación académica con mi interés personal por la
-                    serie, utilizando la tecnología como un medio para ofrecer una
-                    experiencia de usuario enriquecedora, accesible, y por sobretodo, divertida.
-                  </p>
+      <!-- Fin Título -->
+    </header>
+    <main class="container d-flex justify-content-center mt-7 mb-5">
+      <div class="container mt-5">
+        <div>
+          <div class="row">
+            <div class="card card-body bg-custom2 p-3 mt-3 mb-5 w-100 mx-auto">
+              <p class="card-text">
+                El desarrollo de la página web implicó una integración
+                multidisciplinaria entre lo técnico y lo artístico. En el ámbito
+                técnico, se implementaron diversos lenguajes de programación y
+                herramientas de diseño para garantizar la funcionalidad e
+                interactividad de la plataforma, optimizando la experiencia del
+                usuario mediante una interfaz clara, dinámica y adaptable a
+                distintos dispositivos y requerimientos de accesibilidad.<br />
+                En el aspecto artístico, el desafío fue crear una representación
+                visual que reflejara la estética de "How I Met Your Mother",
+                incorporando paletas de colores, tipografías y composiciones que
+                evocaran la esencia de la serie. Se estructuraron secciones
+                dedicadas a resúmenes de episodios, análisis de personajes,
+                teorías y recepción crítica, haciendo de la página un espacio
+                tanto informativo como interactivo. Este proyecto permitió
+                aplicar conocimientos en Artes Multimediales y explorar cómo la
+                tecnología puede fusionarse con el arte para generar
+                experiencias digitales inmersivas, consolidándose como un punto
+                de encuentro para los seguidores de la serie.
+              </p>
+            </div>
+            <!-- Última parte -->
+            <div class="card mb-2 mt-3 bg-custom">
+              <div class="row g-2 align-items-center p-2">
+                <div class="col-md-3 d-flex justify-content-center align-items-center">
+                  <img src="img/desarrolladora.jpg" class="img-fluid rounded m-1" alt="desarrolladora">
+                </div>
+                <div class="col-md-9">
+                  <div class="card-body p-2">
+                    <h5 class="card-title fs-5 mb-1 mt-1">Sobre la Desarrolladora</h5>
+                    <p class="card-text fs-6 mb-1">
+                      Mi nombre es Lourdes, nací el 17 de enero de 2006 en Chaco, Argentina. Motivada por la pasión por el arte y lo innovador, decidí iniciar mis estudios en la carrera de Artes Multimediales en la Universidad Nacional de las Artes (UNA) en 2024. Siendo este trabajo perteneciente a la materia de primer año: "Informática General I", del turno mañana.
+                    </p>
+                    <p class="card-text fs-6 mb-1">
+                      Este proyecto fue concebido con el propósito de combinar los conocimientos adquiridos en mi formación académica con mi interés personal por la serie, utilizando la tecnología como un medio para ofrecer una experiencia de usuario enriquecedora, accesible, y por sobretodo, divertida.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
+            
+            <!-- FIN última parte -->
           </div>
-          <!-- FIN ultima PARTE -->
-
-
-  </div>
-</div>
-     </div>
+        </div>
+      </div>
     </main>
     <footer class="container-fluid bg-custom">
       <section class="container text-center pt-2 pb-2">
         <div class="row align-items-center">
           <div class="col-4 col-sm-2">
-            <a href="contacto.html" class="btn btn-outline-dark btn-sm" role="button" aria-pressed="true">CONTACTO</a>
+            <a
+              href="contacto.html"
+              class="btn btn-outline-dark btn-sm"
+              role="button"
+              aria-pressed="true"
+              >CONTACTO</a
+            >
           </div>
           <div class="col-4 col-sm-2">
             <a href="https://www.facebook.com/OfficialHowIMetYourMother/">
-              <img src="img/iconos/fb.png" alt="facebook" class="img-fluid" >
+              <img src="img/iconos/fb.png" alt="facebook" class="img-fluid" />
             </a>
           </div>
           <div class="col-4 col-sm-2">
-            <a href="https://www.disneyplus.com/es-ar/series/how-i-met-your-mother/3kpBeRQiKjkq">
-              <img src="img/iconos/disney.png" alt="disneyplus" class="img-fluid" >
+            <a
+              href="https://www.disneyplus.com/es-ar/series/how-i-met-your-mother/3kpBeRQiKjkq"
+            >
+              <img
+                src="img/iconos/disney.png"
+                alt="disneyplus"
+                class="img-fluid"
+              />
             </a>
           </div>
           <div class="col-4 col-sm-2">
             <a href="https://www.netflix.com/title/70143824">
-              <img src="img/iconos/netflix.png" alt="netflix" class="img-fluid">
+              <img
+                src="img/iconos/netflix.png"
+                alt="netflix"
+                class="img-fluid"
+              />
             </a>
           </div>
           <div class="col-4 col-sm-2">
-            <a href="https://www.primevideo.com/-/es/detail/How-I-met-your-mother/0HX4L62NMBMKP5QXU8QNR8958G">
-              <img src="img/iconos/prime.png" alt="primevideo" class="img-fluid" >
+            <a
+              href="https://www.primevideo.com/-/es/detail/How-I-met-your-mother/0HX4L62NMBMKP5QXU8QNR8958G"
+            >
+              <img
+                src="img/iconos/prime.png"
+                alt="primevideo"
+                class="img-fluid"
+              />
             </a>
           </div>
           <div class="col-4 col-sm-2">
-            <a href="desarrolladora.html" class="btn btn-outline-dark btn-sm lg-text-nowrap " role="button" aria-pressed="true">SOBRE EL SITIO</a>
+            <a
+              href="desarrolladora.html"
+              class="btn btn-outline-dark btn-sm lg-text-nowrap"
+              role="button"
+              aria-pressed="true"
+              >SOBRE EL SITIO</a
+            >
           </div>
         </div>
       </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
